# wigglegram_creator

./: .gitignore  README.md  create_wiggle.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  macos-release.yml
icons/: icon.icns
specs/: linux.spec  macos.spec  windows.spec
