[project]
name = "wigglegram_creator"
version = "0.1.0"
description = "Wigglegram creator"
requires-python = ">=3.13"
authors = [
    { name = "Willy Hardy"}
]

dependencies = [
    "imageio-ffmpeg",
    "Pillow",
    "PySide6",
    "imageio",
    "scikit-image",
    "numpy",
    "opencv-python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller"
]

[project.scripts]
create_wiggle = "create_wiggle:launch_gui"

[tool.hatch.build.targets.wheel]
packages = ["."]